--- a/sites/all/themes/osbee/sass/_swiper-slideshows.scss
+++ b/sites/all/themes/osbee/sass/_swiper-slideshows.scss
@@ -124,6 +124,7 @@
         }
         .views-slideshow-controls-bottom {
             &.collapsed {
+                margin-top: 65px;
                 height: 0 !important;
                 //overflow: hidden;
                 .jcarousel-skin-blank {
